css: fix navbar text not showing when active

--- a/Material-Ocean/user.css
+++ b/Material-Ocean/user.css
@@ -134,7 +134,7 @@ input {
 
 /* left menu active item background */
 .main-navBar-navBarLinkActive {
-  color: var(--spice-button) !important;
+  color: white;
 }
 
 /* profile icon */
